<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/RegisterTextAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNameAC"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginTop="192dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="15dp"
        android:textColorHint="@android:color/system_neutral1_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextEmailAddressAC"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginTop="268dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="@android:color/system_neutral1_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="404dp"
        android:layout_height="71dp"
        android:layout_marginTop="340dp"
        android:orientation="vertical"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextPasswordAC"
            android:layout_width="305dp"
            android:layout_height="49dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_input_background"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@android:color/system_neutral1_300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="404dp"
        android:layout_height="71dp"
        android:layout_marginTop="420dp"
        android:orientation="vertical"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextPasswordConfirmAC"
            android:layout_width="305dp"
            android:layout_height="49dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="5dp"

            android:background="@drawable/rounded_input_background"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@android:color/system_neutral1_300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginTop="584dp"
        android:padding="10dp"
        android:text="@string/agree_and_register"
        android:background="@drawable/light_blue_button"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>