<resources>
    <string name="app_name">Active Amigo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_matches">Matches</string>
    <string name="menu_calender">Calendar</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_settings">Settings</string>
    <string name="agree_and_register">Agree and Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="createAccountErrorFilledIn">Must fill out all sections</string>
    <string name="createAccountErrorBadEmail">Must be a valid UCSD email</string>
    <string name="createAccountErrorMismatchPassword">Passwords do not match</string>
    <string name="ucsdDomain">ucsd.edu</string>
    <string name="accountCreationFailed">Failed to create account</string>
    <string name="accountCreationSuccess">Account created</string>
    <string name="accountCreationEmailExists">An account is already associated with this email</string>
    <string name="queryError">bad query call</string>
    <string name="dbAccounts">Accounts</string>
    <string name="active_amigo">Active Amigo</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="press_test">Pressed</string>
    <string name="notAccountFound">No account by that email is found</string>
    <string name="misMatchAccountInfo">Account information does not match</string>
    <string name="loggedIn">you logged in</string>
    <string name="createAccountShortPassword">Password but be 6 characters long</string>
    <string name="passwordWithWhiteSpace">Passwords cannot have spaces</string>
    <string name="exercise_choice_fail">Please select valid options for activity and location</string>
    <string name="gender_fail">Please select a gender</string>
    <string name="dob_fail">Please fill Date of birth field</string>
    <string name="bio_fail">Please fill bio fields</string>
    <string name="logout">Logout</string>
    <string name="send_email">Send Email</string>
    <string name="forgotPasswordTitle">Forgot Password?</string>
    <string name="resetPasswordSuccess">Email Sent!</string>
    <string name="loading_calendar">Calendar Loading</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="activity_array">
        <item>Select Activity</item>
        <item>Gym</item>
        <item>Basketball</item>
        <item>Soccer</item>
        <item>Volleyball</item>
        <item>Tennis</item>
        <!-- Add more options if needed -->
    </string-array>

    <string-array name="location_array">
        <item>Select Location</item>
        <item>Rimac</item>
        <item>24hr Fitness UTC</item>
        <item>Canyonview</item>
        <item>Graduate Housing</item>
        <!-- Add more options if needed -->
    </string-array>

    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <!-- Add more options if needed -->
    </string-array>

    <string-array name="day_array">
        <item>Select Day</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
        <!-- Add more options if needed -->
    </string-array>

</resources>